--- a/currency-converter-app/package.json
+++ b/currency-converter-app/package.json
@@ -18,9 +18,13 @@
     "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~13.0.0",
     "@angular/material": "^13.3.9",
+    "@angular/material-moment-adapter": "^13.3.9",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
+    "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
