--- a/currency-converter-app/package.json
+++ b/currency-converter-app/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngxs/devtools-plugin": "^3.7.5",
+    "@ngxs/logger-plugin": "^3.7.5",
+    "@ngxs/store": "^3.7.5",
     "ngx-mat-select-search": "^5.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
